--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -17,7 +17,7 @@ amcl:
     laser_min_range: -1.0
     laser_model_type: "likelihood_field_prob"
     max_beams: 60
-    max_particles: 3000
+    max_particles: 4000
     min_particles: 1000
     odom_frame_id: "odom"
     pf_err: 0.05
@@ -72,7 +72,7 @@ controller_server:
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.001
     min_theta_velocity_threshold: 0.001
-    failure_tolerance: 0.3
+    failure_tolerance: 0.5
     progress_checker_plugins: ["progress_checker"]
     goal_checker_plugins: ["general_goal_checker"] # "precise_goal_checker"
     controller_plugins: ["FollowPath"]
@@ -93,21 +93,21 @@ controller_server:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.25
+      yaw_goal_tolerance: 0.05
     FollowPath:
       plugin: "nav2_mppi_controller::MPPIController"
       time_steps: 56
       model_dt: 0.1
       batch_size: 2000
-      vx_std: 0.2
+      vx_std: 0.3
       vy_std: 0.0
-      wz_std: 0.4
-      vx_max: 0.5
-      vx_min: -0.5
+      wz_std: 0.15  # 0.15
+      vx_max: 0.6
+      vx_min: -0.6
       vy_max: 0.0
-      wz_max: 1.9
-      ax_max: 2.75
-      ax_min: -2.75
+      wz_max: 2.5
+      ax_max: 3.5
+      ax_min: -3.5
       ay_min: 0.0
       ay_max: 0.0
       az_max: 3.5
@@ -123,11 +123,11 @@ controller_server:
         trajectory_step: 5
         time_step: 3
       AckermannConstraints:
-        min_turning_r: 0.05
+        min_turning_r: 0.0
       critics: [
         "ConstraintCritic", "CostCritic", "GoalCritic",
         "GoalAngleCritic", "PathAlignCritic", "PathFollowCritic",
-        "PathAngleCritic", "PreferForwardCritic"]
+        "PathAngleCritic", "PreferForwardCritic", "ObstaclesCritic" , "TwirlingCritic"]
       ConstraintCritic:
         enabled: true
         cost_power: 1
@@ -140,13 +140,22 @@ controller_server:
       GoalAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 6.0  # try 6.0, but 5.0 is ok
+        cost_weight: 13.0 
         threshold_to_consider: 0.5
       PreferForwardCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 5.0
+        cost_weight: 7.0
         threshold_to_consider: 0.5
+      ObstaclesCritic:
+        enabled: true
+        cost_power: 1
+        repulsion_weight: 1.5
+        critical_weight: 20.0
+        consider_footprint: false
+        collision_cost: 10000.0
+        collision_margin_distance: 0.1
+        near_goal_distance: 0.5
       CostCritic:
         enabled: true
         cost_power: 1
@@ -164,7 +173,7 @@ controller_server:
         max_path_occupancy_ratio: 0.05
         trajectory_point_step: 4
         threshold_to_consider: 0.5
-        offset_from_furthest: 20
+        offset_from_furthest: 20  
         use_path_orientations: false
       PathFollowCritic:
         enabled: true
@@ -175,21 +184,23 @@ controller_server:
       PathAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 5.0
+        cost_weight: 2.0
         offset_from_furthest: 4
         threshold_to_consider: 0.5
         max_angle_to_furthest: 1.0
-        mode: 0   # The default is 0: a large error is allowed. Change to 1: Force angle alignment
-      # TwirlingCritic:
-      #   enabled: true
-      #   twirling_cost_power: 1
-      #   twirling_cost_weight: 10.0
+        mode: 0  # 0: Prefer forward, penalize large path angles relative to robot heading
+                 # 1: No direction preference, penalize smaller of forward/backward angles
+                 # 2: Use path direction if available, penalize deviation from requested heading
+      TwirlingCritic:
+        enabled: true
+        twirling_cost_power: 1
+        twirling_cost_weight: 10.0
 
 local_costmap:
   local_costmap:
     ros__parameters:
       update_frequency: 5.0
-      publish_frequency: 2.0
+      publish_frequency: 5.0
       global_frame: odom
       robot_base_frame: base_link
       rolling_window: true
@@ -257,8 +268,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 2.58
-        inflation_radius: 1.75
+        cost_scaling_factor: 2.58   # 2.58
+        inflation_radius: 1.75      # 1.75
       always_send_full_costmap: True
 
 # The yaml_filename does not need to be specified since it going to be set by defaults in launch.
@@ -281,7 +292,7 @@ planner_server:
     use_sim_time: false
     planner_plugins: ["GridBased"]
     GridBased:
-      plugin: "nav2_theta_star_planner::ThetaStarPlanner" # In Iron and older versions, "/" was used instead of "::"
+      plugin: "nav2_theta_star_planner::ThetaStarPlanner"
       how_many_corners: 8
       w_euc_cost: 1.0
       w_traversal_cost: 2.0
@@ -339,10 +350,10 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.5, 0.0, 2.0]     # x, y, z
-    min_velocity: [-0.5, 0.0, -2.0]   # x, y, z
-    max_accel: [2.5, 0.0, 3.2]
-    max_decel: [-2.5, 0.0, -3.2]
+    max_velocity: [0.6, 0.0, 2.5]     # x, y, z
+    min_velocity: [-0.6, 0.0, -2.5]   # x, y, z
+    max_accel: [3.5, 0.0, 3.5]
+    max_decel: [-3.5, 0.0, -3.5]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
