--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -211,8 +211,8 @@ local_costmap:
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 2.58
-        inflation_radius: 1.75
+        cost_scaling_factor: 3.0   # guide : 2.58, ori : 3.0
+        inflation_radius: 0.7      # guide : 1.75, ori : 0.7
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -268,8 +268,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 2.58   # 2.58
-        inflation_radius: 1.75      # 1.75
+        cost_scaling_factor: 3.0   # guide : 2.58, ori : 3.0
+        inflation_radius: 0.7      # guide : 1.75, ori : 0.7
       always_send_full_costmap: True
 
 # The yaml_filename does not need to be specified since it going to be set by defaults in launch.
