--- a/map/b1.yaml
+++ b/map/b1.yaml
@@ -1,6 +1,6 @@
 image: b1.png
 resolution: 0.1
-origin: [-55, -35, 0.0]
+origin: [-35.0, -10.0, 0.0]   # start pose
 occupied_thresh: 0.5
 free_thresh: 0.2
 negate: 0
