--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -95,144 +95,144 @@ controller_server:
       xy_goal_tolerance: 0.25
       yaw_goal_tolerance: 0.05
     # MPPI controller
-    # FollowPath:
-    #   plugin: "nav2_mppi_controller::MPPIController"
-    #   time_steps: 56
-    #   model_dt: 0.1
-    #   batch_size: 2000
-    #   vx_std: 0.3
-    #   vy_std: 0.0
-    #   wz_std: 0.15  # 0.15
-    #   vx_max: 0.6
-    #   vx_min: -0.6
-    #   vy_max: 0.0
-    #   wz_max: 2.5
-    #   ax_max: 3.5
-    #   ax_min: -3.5
-    #   ay_min: 0.0
-    #   ay_max: 0.0
-    #   az_max: 3.5
-    #   iteration_count: 1
-    #   prune_distance: 1.7
-    #   transform_tolerance: 0.1
-    #   temperature: 0.3
-    #   gamma: 0.015
-    #   motion_model: "DiffDrive"
-    #   visualize: true
-    #   regenerate_noises: true
-    #   TrajectoryVisualizer:
-    #     trajectory_step: 5
-    #     time_step: 3
-    #   AckermannConstraints:
-    #     min_turning_r: 0.0
-    #   critics: [
-    #     "ConstraintCritic", "CostCritic", "GoalCritic",
-    #     "GoalAngleCritic", "PathAlignCritic", "PathFollowCritic",
-    #     "PathAngleCritic", "PreferForwardCritic", "ObstaclesCritic" , "TwirlingCritic"]
-    #   ConstraintCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     cost_weight: 4.0
-    #   GoalCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     cost_weight: 5.0
-    #     threshold_to_consider: 1.4
-    #   GoalAngleCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     cost_weight: 13.0 
-    #     threshold_to_consider: 0.5
-    #   PreferForwardCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     cost_weight: 7.0
-    #     threshold_to_consider: 0.5
-    #   ObstaclesCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     repulsion_weight: 1.5
-    #     critical_weight: 20.0
-    #     consider_footprint: false
-    #     collision_cost: 10000.0
-    #     collision_margin_distance: 0.1
-    #     near_goal_distance: 0.5
-    #   CostCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     cost_weight: 3.81
-    #     near_collision_cost: 253
-    #     critical_cost: 300.0
-    #     consider_footprint: false
-    #     collision_cost: 1000000.0
-    #     near_goal_distance: 1.0
-    #     trajectory_point_step: 2
-    #   PathAlignCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     cost_weight: 14.0
-    #     max_path_occupancy_ratio: 0.05
-    #     trajectory_point_step: 4
-    #     threshold_to_consider: 0.5
-    #     offset_from_furthest: 20  
-    #     use_path_orientations: false
-    #   PathFollowCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     cost_weight: 5.0
-    #     offset_from_furthest: 5
-    #     threshold_to_consider: 1.4
-    #   PathAngleCritic:
-    #     enabled: true
-    #     cost_power: 1
-    #     cost_weight: 2.0
-    #     offset_from_furthest: 4
-    #     threshold_to_consider: 0.5
-    #     max_angle_to_furthest: 1.0
-    #     mode: 0  # 0: Prefer forward, penalize large path angles relative to robot heading
-    #              # 1: No direction preference, penalize smaller of forward/backward angles
-    #              # 2: Use path direction if available, penalize deviation from requested heading
-    #   TwirlingCritic:
-    #     enabled: true
-    #     twirling_cost_power: 1
-    #     twirling_cost_weight: 10.0
-    # DWB parameters
     FollowPath:
-      plugin: "dwb_core::DWBLocalPlanner"
-      debug_trajectory_details: True
-      min_vel_x: 0.0
-      min_vel_y: 0.0
-      max_vel_x: 0.26
-      max_vel_y: 0.0
-      max_vel_theta: 1.0
-      min_speed_xy: 0.0
-      max_speed_xy: 0.26
-      min_speed_theta: 0.0
-      acc_lim_x: 2.5
-      acc_lim_y: 0.0
-      acc_lim_theta: 3.2
-      decel_lim_x: -2.5
-      decel_lim_y: 0.0
-      decel_lim_theta: -3.2
-      vx_samples: 20
-      vy_samples: 5
-      vtheta_samples: 20
-      sim_time: 1.7
-      linear_granularity: 0.05
-      angular_granularity: 0.025
-      transform_tolerance: 0.2
-      trans_stopped_velocity: 0.25
-      short_circuit_trajectory_evaluation: True
-      stateful: True
-      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
-      BaseObstacle.scale: 0.02
-      PathAlign.scale: 0.0
-      GoalAlign.scale: 0.0
-      PathDist.scale: 32.0
-      GoalDist.scale: 24.0
-      RotateToGoal.scale: 32.0
-      RotateToGoal.slowing_factor: 5.0
-      RotateToGoal.lookahead_time: -1.0
+      plugin: "nav2_mppi_controller::MPPIController"
+      time_steps: 56
+      model_dt: 0.1
+      batch_size: 2000
+      vx_std: 0.3
+      vy_std: 0.0
+      wz_std: 0.15  # 0.15
+      vx_max: 0.6
+      vx_min: -0.6
+      vy_max: 0.0
+      wz_max: 2.5
+      ax_max: 3.5
+      ax_min: -3.5
+      ay_min: 0.0
+      ay_max: 0.0
+      az_max: 3.5
+      iteration_count: 1
+      prune_distance: 1.7
+      transform_tolerance: 0.1
+      temperature: 0.3
+      gamma: 0.015
+      motion_model: "DiffDrive"
+      visualize: true
+      regenerate_noises: true
+      TrajectoryVisualizer:
+        trajectory_step: 5
+        time_step: 3
+      AckermannConstraints:
+        min_turning_r: 0.0
+      critics: [
+        "ConstraintCritic", "CostCritic", "GoalCritic",
+        "GoalAngleCritic", "PathAlignCritic", "PathFollowCritic",
+        "PathAngleCritic", "PreferForwardCritic", "ObstaclesCritic" , "TwirlingCritic"]
+      ConstraintCritic:
+        enabled: true
+        cost_power: 1
+        cost_weight: 4.0
+      GoalCritic:
+        enabled: true
+        cost_power: 1
+        cost_weight: 5.0
+        threshold_to_consider: 1.4
+      GoalAngleCritic:
+        enabled: true
+        cost_power: 1
+        cost_weight: 13.0 
+        threshold_to_consider: 0.5
+      PreferForwardCritic:
+        enabled: true
+        cost_power: 1
+        cost_weight: 7.0
+        threshold_to_consider: 0.5
+      ObstaclesCritic:
+        enabled: true
+        cost_power: 1
+        repulsion_weight: 1.5
+        critical_weight: 20.0
+        consider_footprint: false
+        collision_cost: 10000.0
+        collision_margin_distance: 0.1
+        near_goal_distance: 0.5
+      CostCritic:
+        enabled: true
+        cost_power: 1
+        cost_weight: 3.81
+        near_collision_cost: 253
+        critical_cost: 300.0
+        consider_footprint: false
+        collision_cost: 1000000.0
+        near_goal_distance: 1.0
+        trajectory_point_step: 2
+      PathAlignCritic:
+        enabled: true
+        cost_power: 1
+        cost_weight: 14.0
+        max_path_occupancy_ratio: 0.05
+        trajectory_point_step: 4
+        threshold_to_consider: 0.5
+        offset_from_furthest: 20  
+        use_path_orientations: false
+      PathFollowCritic:
+        enabled: true
+        cost_power: 1
+        cost_weight: 5.0
+        offset_from_furthest: 5
+        threshold_to_consider: 1.4
+      PathAngleCritic:
+        enabled: true
+        cost_power: 1
+        cost_weight: 2.0
+        offset_from_furthest: 4
+        threshold_to_consider: 0.5
+        max_angle_to_furthest: 1.0
+        mode: 0  # 0: Prefer forward, penalize large path angles relative to robot heading
+                 # 1: No direction preference, penalize smaller of forward/backward angles
+                 # 2: Use path direction if available, penalize deviation from requested heading
+      TwirlingCritic:
+        enabled: true
+        twirling_cost_power: 1
+        twirling_cost_weight: 10.0
+    # DWB parameters
+    # FollowPath:
+    #   plugin: "dwb_core::DWBLocalPlanner"
+    #   debug_trajectory_details: True
+    #   min_vel_x: 0.0
+    #   min_vel_y: 0.0
+    #   max_vel_x: 0.26
+    #   max_vel_y: 0.0
+    #   max_vel_theta: 1.0
+    #   min_speed_xy: 0.0
+    #   max_speed_xy: 0.26
+    #   min_speed_theta: 0.0
+    #   acc_lim_x: 2.5
+    #   acc_lim_y: 0.0
+    #   acc_lim_theta: 3.2
+    #   decel_lim_x: -2.5
+    #   decel_lim_y: 0.0
+    #   decel_lim_theta: -3.2
+    #   vx_samples: 20
+    #   vy_samples: 5
+    #   vtheta_samples: 20
+    #   sim_time: 1.7
+    #   linear_granularity: 0.05
+    #   angular_granularity: 0.025
+    #   transform_tolerance: 0.2
+    #   trans_stopped_velocity: 0.25
+    #   short_circuit_trajectory_evaluation: True
+    #   stateful: True
+    #   critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+    #   BaseObstacle.scale: 0.02
+    #   PathAlign.scale: 0.0
+    #   GoalAlign.scale: 0.0
+    #   PathDist.scale: 32.0
+    #   GoalDist.scale: 24.0
+    #   RotateToGoal.scale: 32.0
+    #   RotateToGoal.slowing_factor: 5.0
+    #   RotateToGoal.lookahead_time: -1.0
 
 local_costmap:
   local_costmap:
@@ -249,8 +249,8 @@ local_costmap:
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0   # guide : 2.58, ori : 3.0
-        inflation_radius: 0.7      # guide : 1.75, ori : 0.7
+        cost_scaling_factor: 2.58   # guide : 2.58, ori : 3.0
+        inflation_radius: 1.75      # guide : 1.75, ori : 0.7
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -306,8 +306,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0   # guide : 2.58, ori : 3.0
-        inflation_radius: 0.7      # guide : 1.75, ori : 0.7
+        cost_scaling_factor: 2.58   # guide : 2.58, ori : 3.0
+        inflation_radius: 1.75      # guide : 1.75, ori : 0.7
       always_send_full_costmap: True
 
 # The yaml_filename does not need to be specified since it going to be set by defaults in launch.
@@ -324,27 +324,27 @@ map_saver:
     occupied_thresh_default: 0.65
     map_subscribe_transient_local: True
 
-planner_server:
-  ros__parameters:
-    expected_planner_frequency: 20.0
-    use_sim_time: false
-    planner_plugins: ["GridBased"]
-    GridBased:
-      plugin: "nav2_theta_star_planner::ThetaStarPlanner"
-      how_many_corners: 8
-      w_euc_cost: 1.0
-      w_traversal_cost: 2.0
-      w_heuristic_cost: 1.0
 # planner_server:
 #   ros__parameters:
 #     expected_planner_frequency: 20.0
+#     use_sim_time: false
 #     planner_plugins: ["GridBased"]
-#     costmap_update_timeout: 1.0
 #     GridBased:
-#       plugin: "nav2_navfn_planner::NavfnPlanner"
-#       tolerance: 0.5
-#       use_astar: false
-#       allow_unknown: true
+#       plugin: "nav2_theta_star_planner::ThetaStarPlanner"
+#       how_many_corners: 8
+#       w_euc_cost: 1.0
+#       w_traversal_cost: 2.0
+#       w_heuristic_cost: 1.0
+# planner_server:
+  ros__parameters:
+    expected_planner_frequency: 20.0
+    planner_plugins: ["GridBased"]
+    costmap_update_timeout: 1.0
+    GridBased:
+      plugin: "nav2_navfn_planner::NavfnPlanner"
+      tolerance: 0.5
+      use_astar: true
+      allow_unknown: true
 
 smoother_server:
   ros__parameters:
