--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -93,7 +93,7 @@ controller_server:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.05
+      yaw_goal_tolerance: 0.02
     # MPPI controller
     FollowPath:
       plugin: "nav2_mppi_controller::MPPIController"
@@ -141,7 +141,7 @@ controller_server:
       GoalAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 13.0 
+        cost_weight: 20.0   # 13.0
         threshold_to_consider: 0.5
       PreferForwardCritic:
         enabled: true
@@ -170,7 +170,7 @@ controller_server:
       PathAlignCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 14.0
+        cost_weight: 20.0   # 14.0
         max_path_occupancy_ratio: 0.05
         trajectory_point_step: 4
         threshold_to_consider: 0.5
@@ -398,10 +398,10 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.6, 0.0, 2.5]     # x, y, z
-    min_velocity: [-0.6, 0.0, -2.5]   # x, y, z
-    max_accel: [3.5, 0.0, 3.5]
-    max_decel: [-3.5, 0.0, -3.5]
+    max_velocity: [0.3, 0.0, 2.5]     # x, y, z
+    min_velocity: [-0.3, 0.0, -2.5]   # x, y, z
+    max_accel: [3.0, 0.0, 3.0]
+    max_decel: [-3.0, 0.0, -3.0]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
