--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -92,8 +92,8 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.02
+      xy_goal_tolerance: 0.1
+      yaw_goal_tolerance: 0.05
     # MPPI controller
     FollowPath:
       plugin: "nav2_mppi_controller::MPPIController"
@@ -246,13 +246,13 @@ local_costmap:
       height: 5
       resolution: 0.05
       footprint: "[ [-0.4, -0.3], [-0.4, 0.3], [0.4, 0.3], [0.4, -0.3] ]"
-      plugins: ["voxel_layer", "inflation_layer"]
+      plugins: ["obstacle_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 2.58   # guide : 2.58, ori : 3.0
         inflation_radius: 1.75      # guide : 1.75, ori : 0.7
-      voxel_layer:
-        plugin: "nav2_costmap_2d::VoxelLayer"
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
         publish_voxel_map: True
         origin_z: 0.0
