--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -93,7 +93,7 @@ controller_server:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.1
-      yaw_goal_tolerance: 0.05
+      yaw_goal_tolerance: 0.02
     # MPPI controller
     FollowPath:
       plugin: "nav2_mppi_controller::MPPIController"
@@ -107,11 +107,11 @@ controller_server:
       vx_min: -0.6
       vy_max: 0.0
       wz_max: 2.5
-      ax_max: 3.5
-      ax_min: -3.5
+      ax_max: 2.5   # test : slow
+      ax_min: -2.5  # test : slow
       ay_min: 0.0
       ay_max: 0.0
-      az_max: 3.5
+      az_max: 2.5
       iteration_count: 1
       prune_distance: 1.7
       transform_tolerance: 0.1
@@ -124,7 +124,7 @@ controller_server:
         trajectory_step: 5
         time_step: 3
       AckermannConstraints:
-        min_turning_r: 0.0
+        min_turning_r: 0.5  # test
       critics: [
         "ConstraintCritic", "CostCritic", "GoalCritic",
         "GoalAngleCritic", "PathAlignCritic", "PathFollowCritic",
@@ -136,12 +136,12 @@ controller_server:
       GoalCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 5.0
-        threshold_to_consider: 1.4    # ori : 1.4, check : 2.0 
+        cost_weight: 15.0
+        threshold_to_consider: 1.2    # ori : 1.4, check : 2.0 
       GoalAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 20.0   # 13.0
+        cost_weight: 7.0   # 13.0
         threshold_to_consider: 0.5    # ori : 0.5, check : 1.0
       PreferForwardCritic:
         enabled: true
@@ -324,27 +324,27 @@ map_saver:
     occupied_thresh_default: 0.65
     map_subscribe_transient_local: True
 
-# planner_server:
-#   ros__parameters:
-#     expected_planner_frequency: 20.0
-#     use_sim_time: false
-#     planner_plugins: ["GridBased"]
-#     GridBased:
-#       plugin: "nav2_theta_star_planner::ThetaStarPlanner"
-#       how_many_corners: 8
-#       w_euc_cost: 1.0
-#       w_traversal_cost: 2.0
-#       w_heuristic_cost: 1.0
-# planner_server:
+planner_server:
   ros__parameters:
     expected_planner_frequency: 20.0
+    use_sim_time: false
     planner_plugins: ["GridBased"]
-    costmap_update_timeout: 1.0
     GridBased:
-      plugin: "nav2_navfn_planner::NavfnPlanner"
-      tolerance: 0.5
-      use_astar: true
-      allow_unknown: true
+      plugin: "nav2_theta_star_planner::ThetaStarPlanner"
+      how_many_corners: 8
+      w_euc_cost: 1.0
+      w_traversal_cost: 2.0
+      w_heuristic_cost: 1.0
+# planner_server:
+  # ros__parameters:
+  #   expected_planner_frequency: 20.0
+  #   planner_plugins: ["GridBased"]
+  #   costmap_update_timeout: 1.0
+  #   GridBased:
+  #     plugin: "nav2_navfn_planner::NavfnPlanner"
+  #     tolerance: 0.5
+  #     use_astar: true
+  #     allow_unknown: true
 
 smoother_server:
   ros__parameters:
@@ -400,8 +400,8 @@ velocity_smoother:
     feedback: "OPEN_LOOP"
     max_velocity: [0.35, 0.0, 2.5]     # x, y, z
     min_velocity: [-0.35, 0.0, -2.5]   # x, y, z
-    max_accel: [3.0, 0.0, 3.0]
-    max_decel: [-3.0, 0.0, -3.0]
+    max_accel: [2.5, 0.0, 2.5]
+    max_decel: [-2.5, 0.0, -2.5]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
