--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -181,7 +181,7 @@ controller_server:
         cost_power: 1
         cost_weight: 5.0
         offset_from_furthest: 5
-        threshold_to_consider: 1.4
+        threshold_to_consider: 0.5      # ori : 1.4
       PathAngleCritic:
         enabled: true
         cost_power: 1
