--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -1,10 +1,10 @@
 amcl:
   ros__parameters:
-    alpha1: 0.2
-    alpha2: 0.2
-    alpha3: 0.2
-    alpha4: 0.2
-    alpha5: 0.2
+    alpha1: 0.05
+    alpha2: 0.05
+    alpha3: 0.1
+    alpha4: 0.05
+    alpha5: 0.1
     base_frame_id: "base_link"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
@@ -17,8 +17,8 @@ amcl:
     laser_min_range: -1.0
     laser_model_type: "likelihood_field_prob"
     max_beams: 60
-    max_particles: 4000
-    min_particles: 1000
+    max_particles: 2500
+    min_particles: 800
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
@@ -30,11 +30,11 @@ amcl:
     sigma_hit: 0.2
     tf_broadcast: true
     transform_tolerance: 1.0
-    update_min_a: 0.05
-    update_min_d: 0.1
+    update_min_a: 0.1
+    update_min_d: 0.05
     z_hit: 0.5
     z_max: 0.05
-    z_rand: 0.5
+    z_rand: 0.2
     z_short: 0.05
     scan_topic: scan_hokuyo
 
@@ -92,26 +92,27 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.25
+      xy_goal_tolerance: 0.2
+      yaw_goal_tolerance: 0.1
     # MPPI controller
     FollowPath:
       plugin: "nav2_mppi_controller::MPPIController"
       time_steps: 56
       model_dt: 0.1
       batch_size: 2000
-      vx_std: 0.3
+      vx_std: 0.15
       vy_std: 0.0
-      wz_std: 0.15  # 0.15
-      vx_max: 0.6
-      vx_min: -0.6
+      wz_std: 0.5  # 0.15
+      vx_max: 0.5   # 0.4 ok
+      vx_min: -0.5  
       vy_max: 0.0
-      wz_max: 2.5
-      ax_max: 2.5   # test : slow
-      ax_min: -2.5  # test : slow
+      wz_max: 3.5   # 2.0?
+      wz_min: -3.5
+      ax_max: 1.5   
+      ax_min: -1.5  
       ay_min: 0.0
       ay_max: 0.0
-      az_max: 2.0
+      az_max: 4.0
       iteration_count: 1
       prune_distance: 1.7
       transform_tolerance: 0.1
@@ -136,13 +137,13 @@ controller_server:
       GoalCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 15.0
-        threshold_to_consider: 1.2    # ori : 1.4, check : 2.0 
+        cost_weight: 10.0
+        threshold_to_consider: 1.4    # ori : 1.4
       GoalAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 7.0   # 13.0
-        threshold_to_consider: 0.5    # ori : 0.5, check : 1.0
+        cost_weight: 5.0   # 13.0
+        threshold_to_consider: 0.3    # ori : 0.5, check : 1.0
       PreferForwardCritic:
         enabled: true
         cost_power: 1
@@ -170,7 +171,7 @@ controller_server:
       PathAlignCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 20.0                 # ori :10.0
+        cost_weight: 10.0                 # ori :10.0
         max_path_occupancy_ratio: 0.05
         trajectory_point_step: 4
         threshold_to_consider: 0.5
@@ -181,7 +182,7 @@ controller_server:
         cost_power: 1
         cost_weight: 5.0
         offset_from_furthest: 5
-        threshold_to_consider: 0.5      # ori : 1.4
+        threshold_to_consider: 1.4      # ori : 1.4
       PathAngleCritic:
         enabled: true
         cost_power: 1
@@ -398,10 +399,10 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.35, 0.0, 0.25]     # x, y, z
-    min_velocity: [-0.35, 0.0, -0.25]   # x, y, z
-    max_accel: [1.5, 0.0, 0.4]
-    max_decel: [-1.5, 0.0, -0.4]
+    max_velocity: [0.5, 0.0, 3.5]     # x, y, z
+    min_velocity: [-0.5, 0.0, -3.5]   # x, y, z
+    max_accel: [1.5, 0.0, 4.0]
+    max_decel: [-1.5, 0.0, -4.0]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
