--- a/config/dlio_setting.yaml
+++ b/config/dlio_setting.yaml
@@ -15,7 +15,7 @@
 
     version: 1.1.1
 
-    adaptive: false 
+    adaptive: true  # if mapping set false
 
     pointcloud/deskew: true
     pointcloud/voxelize: true
